Fixed I/O build issues